Whole bunch of shit

--- a/book.html
+++ b/book.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Aotearoa Independent Film - Homepage</title>
+    <title>AIF Book</title>
 </head>
 <body>
     <div class="header">
@@ -21,14 +21,13 @@
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="#">Why does this website look like shit?</a></li>
+                <li><a href="whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
-            Welcome to the official Aotearoa Independent Film website.<br>
+            I wrote a book that covers some of my thoughts and advice on independent/self-funded filmmaker<br>
             <br>
-            AIF aims to support and champion independent kiwi filmmakers who embodys the spirit of indepedant film
-            thought self-production, unique visions and a focus on artistic expression in their work.<br>
+            The book is only availble in physical form so if you're looking to grab a copy you can e-mail me at ftheodoreelliott[at]proton.me or feel free to come and have a chat if you see me at an event of something.<br>
             <br>
             - f. theodore elliott
         </div>
