--- a/filmmakers.html
+++ b/filmmakers.html
@@ -11,19 +11,43 @@
         Aotearoa Independent Film
     </div>
 
-    <div class="body">
+    <div class="page">
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder;">LINKS</p1>
                 <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="#">Book</a></li>
+                <li><a href="book.html">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
+                <li> <br></li>
+                <li><a href="#">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
+            <div class="bodyheading">
+                Filmmakers & Their Films
+            </div>
+            <div class="bodytext">
             This is template text for the Filmmakers/films page on the AIF website.
+            </div>
+
+            <div class="filmmakers">
+                <div class="filmmaker">
+                    <img src="mePhoto.jpg" alt="Photo of f. theodore elliott" style="width: 100px; height:auto">
+                    <div class="filmmaker_info">
+                        f. theodore elliott
+                    </div>
+                </div>
+
+                <div class="filmmaker">
+                    <img src="mePhoto.jpg" alt="Photo of f. theodore elliott" style="width: 100px; height:auto">
+                    <div class="filmmaker_info">
+                        another filmmaker here
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>    
 </body>
