Added subfolders for individual pages. Changed homepage text. Added Colour to heading

--- a/index.html
+++ b/index.html
@@ -14,23 +14,31 @@
     <div class="page">
         <div class="sidebar">
             <ul>
-                <p1 style="color: green; font-weight: bolder;">LINKS</p1>
-                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="#">Book</a></li>
+                <p1 style="color: green; font-weight: bolder; font-size: 21px;">LINKS</p1>
+                <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="./book/book.html">Books</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
-                <li><a href="#">Newsletter</a></li>
+                <!-- <li><a href="#">Newsletter</a></li> -->
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="#">Why does this website look like shit?</a></li>
+                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
-            Welcome to the official Aotearoa Independent Film website.<br>
+            Welcome to the Aotearoa Independent Film website.<br>
             <br>
-            AIF aims to support and champion independent kiwi filmmakers who embodys the spirit of indepedant film
-            thought self-production, unique visions and a focus on artistic expression in their work.<br>
-            <br>
+            There was some desciprtion here of what AIF is supposed to be but fuck all that now. I just want to make stuff now<br>
+            You want to makes stuff too? Cool... Let me know what you're up to. I'm always happy to hear from other local independent filmmakers.<br>
+            <br> 
             - f. theodore elliott
+            <br> 
+            <br> 
+            <div style="font-size: 10px; color: green;">
+             im shit at spelling and proof reading and all the content for this website is written in the coding programme which doesn't do the underlining misspelt words thing.
+            so there are probably a lot of spelling and typographical errors<br>
+            <br>
+            bite me<br>
+            </div>
         </div>
     </div>    
 </body>
