--- a/whywebsite/whywebsite.html
+++ b/whywebsite/whywebsite.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Why does this website look like shit?</title>
 </head>
 <body>
     <div class="header">
-        Aotearoa Independent Film
+        <a href="../index.html">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder;">LINKS</p1>
-                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="book.html">Book</a></li>
+                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="../book/book.html">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
@@ -85,8 +85,7 @@
             What happened to thinking about what you want make and making intentional creatives choices for all it's elements to bring that vision to life?<br>
             <br>
             It seems most people just want to cut the thinking out of as many parts of the creative process as possible.<br>
-            They're more interested in the 'having done' something than the actual process of doing.<br>
-            (see: people who use AI tools to generate a song or a picture or whatever so they don't have to spend the time learning, practicing and creating. Those parts (the work) are the art. They are the fun part. If you don't want to do those things fine, but then your not creating something. They want to eat their cake without having it first. There's no 'cake eating' without 'cake having'. You just want to tell people you ate a cake... (what the fuck am I talking about?)<br>
+            So they just follow the default without even thinking.<br>
             <br>
             Don't you want your creation to be an expression of yourself?<br>
             Or do you just want it to be popular?<br>
