added episodes folder and page. esiting content and formatting of filmmamkers page

--- a/episodes/episodes.html
+++ b/episodes/episodes.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>Aotearoa Independent Film - Homepage</title>
 </head>
 <body>
     <div class="header">
-        Aotearoa Independent Film
+        <a href="../index.html">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
@@ -25,17 +25,7 @@
             </ul>
         </div>
         <div class="body">
-            Welcome to the Aotearoa Independent Film website.<br>
-            <br>
-            There was some desciprtion here of what AIF is supposed to be but fuck all that now. I just want to make stuff now<br>
-            You want to makes stuff too? Cool... Let me know what you're up to. I'm always happy to hear from other local independent filmmakers.<br>
-            <br> 
-            - f. theodore elliott
-            <br> 
-            <br> 
-            <div style="font-size: 10px; color: green;">
-             im shit at spelling and proof reading and all the content for this website is written in the coding programme which doesn't do the underlining misspelt words thing.
-            so there are probably a lot of spelling and typographical errors<br>
+            
             <br>
             bite me<br>
             </div>
