--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>AIF -Filmmakers</title>
 </head>
 <body>
@@ -14,7 +14,7 @@
     <div class="page">
         <div class="sidebar">
             <ul>
-                <p1 style="color: green; font-weight: bolder;">LINKS</p1>
+                <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="book.html">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
