--- a/whywebsite/whywebsite.html
+++ b/whywebsite/whywebsite.html
@@ -14,10 +14,10 @@
     <div class="page">
         <div class="sidebar">
             <ul>
-                <p1 style="color: green; font-weight: bolder;">LINKS</p1>
+                <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Book</a></li>
-                <li><a href="#">Podcast Episodes</a></li>
+                <li><a href="#"> __ Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
