added page for me in filmamkers. Added Placing an Order page

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -15,7 +15,7 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="#">Filmmakers / films ('watch')</a></li>
+                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="book.html">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
@@ -26,27 +26,14 @@
         </div>
         <div class="body">
             <div class="bodyheading">
-                Filmmakers & Their Films
+                f. theodore elliott
             </div>
             <div class="bodytext">
-            Below are the filmmakers who currently have films distributed by AIF.<br>
-            Click on their image to view informaiton about their films, including how to purchase.
+            theodore is a filmmmaker<br>
             <br>
-            <br>
-            </div>
-
-            <div class="filmmakers">
-                <div class="filmmaker">
-                    <a href="f.theodore.elliott.html"><img src="mePhoto.jpg" alt="Photo of f. theodore elliott" style="width: 200px; height:auto"></a>
-                    <div class="filmmaker_info">
-                        <a href="f.theodore.elliott.html">f. theodore elliott</a>
-                    </div>
-                </div>
-
-
-                </div>
-
-            </div>
+            He has made the following films which are avilable for purchase<br>
+            To purchase, visit the <a href="../placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.
+     
         </div>
     </div>    
 </body>
