--- a/placinganorder.html
+++ b/placinganorder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>AIF -Filmmakers</title>
+    <title>Placing An Order</title>
 </head>
 <body>
     <div class="header">
@@ -15,8 +15,9 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="#">Filmmakers / films ('watch')</a></li>
+                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="book.html">Book</a></li>
+                <li><a href="book.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
@@ -26,27 +27,14 @@
         </div>
         <div class="body">
             <div class="bodyheading">
-                Filmmakers & Their Films
+                f. theodore elliott
             </div>
             <div class="bodytext">
-            Below are the filmmakers who currently have films distributed by AIF.<br>
-            Click on their image to view informaiton about their films, including how to purchase.
+            theodore is a filmmmaker<br>
             <br>
-            <br>
-            </div>
-
-            <div class="filmmakers">
-                <div class="filmmaker">
-                    <a href="f.theodore.elliott.html"><img src="mePhoto.jpg" alt="Photo of f. theodore elliott" style="width: 200px; height:auto"></a>
-                    <div class="filmmaker_info">
-                        <a href="f.theodore.elliott.html">f. theodore elliott</a>
-                    </div>
-                </div>
-
-
-                </div>
-
-            </div>
+            He has made the following films which are avilable for purchase<br>
+            To purchase, visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.
+     
         </div>
     </div>    
 </body>
