order form page (currently in draft)

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style.css">
-    <title>AIF -Filmmakers</title>
+    <title>f. theodore elliott</title>
 </head>
 <body>
     <div class="header">
@@ -15,13 +15,14 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="book.html">Book</a></li>
+                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="../book/book.html">Book</a></li>
+                <li><a href="../placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="#">Why does this website look like shit?</a></li>
+                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
@@ -32,8 +33,8 @@
             theodore is a filmmmaker<br>
             <br>
             He has made the following films which are avilable for purchase<br>
-            To purchase, visit the <a href="../placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.
-     
+            To purchase, visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.
+            </div>
         </div>
     </div>    
 </body>
