--- a/placinganorder.html
+++ b/placinganorder.html
@@ -3,38 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Placing An Order</title>
 </head>
 <body>
     <div class="header">
-        <a href="../index.html">Aotearoa Independent Film</a>
+        <a href="index.html">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="book.html">Book</a></li>
-                <li><a href="book.html">Ordering Films & Books from AIF</a></li>
+                <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="./book/book.html">Book</a></li>
+                <li><a href="#">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="#">Why does this website look like shit?</a></li>
+                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
             <div class="bodyheading">
-                f. theodore elliott
+                Ordering Films & Books from AIF
             </div>
             <div class="bodytext">
-            theodore is a filmmmaker<br>
+            To order a copy of any of the films listed in the <a href="./filmmakers/filmmakers.html">Filmmakers / films<a> section please download and fill out an <a style="font-weight: bold; color: green;" href="AIFOrderForm.pdf" target="_blank">Order Form</a> (click to download)<br>
+            You can e-mail your for to theodore[at]aotearoaindependentfilm.com and I'll get back to you asap to sort payment and access to download and view your purchases.<br>
+            Alternately you can give Theo a call directly, and let him know which films you're interesteed in purchasing and he'll help you sort out the details.<br>
             <br>
-            He has made the following films which are avilable for purchase<br>
-            To purchase, visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.
-     
+            Book purchases will be shipped once payment has been recieved. Please note that films are currently only avilable as digital downloads (no phyisical DVDs/BluRays yet, sorry).<br>
+            If you have issues downloading large files then get in touch and we'll try sort out mailing you a USB stick or something.<br>
+            <br>
+            <a style="font-weight: bold; color: green; font-size: 20px;" href="AIFOrderForm.pdf" target="_blank">AIF Order Form</a>
+            
+            </div>
         </div>
     </div>    
 </body>
