Added book and contact page. Fixed some header links

--- a/book/book.html
+++ b/book/book.html
@@ -3,25 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>AIF Book</title>
 </head>
 <body>
     <div class="header">
-        Aotearoa Independent Film
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
         <div class="sidebar">
             <ul>
-                <p1 style="color: green; font-weight: bolder;">LINKS</p1>
-                <li><a href="filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <p1 style="color: green; font-weight: bolder; ">LINKS</p1>
+                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="#">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="whywebsite.html">Why does this website look like shit?</a></li>
+                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
