--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html">Aotearoa Independent Film</a>
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
@@ -16,12 +16,14 @@
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="#">Filmmakers / films ('watch')</a></li>
-                <li><a href="book.html">Book</a></li>
+                <li><a href="../book/book.html">Book</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
-                <li><a href="#">Why does this website look like shit?</a></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
+                <li> <br></li>
+                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
