--- a/index.html
+++ b/index.html
@@ -22,14 +22,17 @@
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
+                <li><a href="./contact/contact.html">Contact</a></li>
+                <li> <br></li>
                 <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
             Welcome to the Aotearoa Independent Film website.<br>
             <br>
-            There was some desciprtion here of what AIF is supposed to be but fuck all that now. I just want to make stuff now<br>
+            There was some descriprion here of what AIF is supposed to be but fuck all that now. I just want to make stuff now.<br>
             You want to makes stuff too? Cool... Let me know what you're up to. I'm always happy to hear from other local independent filmmakers.<br>
+            My details are in the Contact page.
             <br> 
             - f. theodore elliott
             <br> 
@@ -37,7 +40,6 @@
             <div style="font-size: 10px; color: green;">
              im shit at spelling and proof reading and all the content for this website is written in the coding programme which doesn't do the underlining misspelt words thing.
             so there are probably a lot of spelling and typographical errors<br>
-            <br>
             bite me<br>
             </div>
         </div>
