Starting adding info on my films to my filmmaker page

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -8,19 +8,21 @@
 </head>
 <body>
     <div class="header">
-        <a href="../index.html">Aotearoa Independent Film</a>
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="./filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Book</a></li>
-                <li><a href="../placinganorder.html">Ordering Films & Books from AIF</a></li>
+                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
+                <li> <br></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
                 <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
@@ -31,9 +33,32 @@
             </div>
             <div class="bodytext">
             theodore is a filmmmaker<br>
+            He has made the following films which are avilable for purchase:<br>
             <br>
-            He has made the following films which are avilable for purchase<br>
-            To purchase, visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.
+            (To purchase, any films from AIF please visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.)
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="baseballposter.jpg" alt="Baseball film poster" style="width: 250px; height:auto"></a>
+                    </div>    
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> Baseball (2016) </div>
+                    <div style="font-weight: bold">Everyone around here knows each other now…</div>
+                    <div>Abandoned houses filled with useless old junk. Empty streets in deserted suburbs. And why do the airplanes seem to only be heading west?<br>‘Baseball’ is a cryptic and hypnotic fever-dream of a world out of sync. Like picture postcards from a parallel universe, a series of static and surreal vignettes reveal the lives of a loose knit group of teenagers trying to find sense in emptiness.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="objectlessonposter.jpg" alt="The Object Lesson film poster" style="width: 250px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> The Object Lesson (2018) </div>
+                    <div>Briar and Belle live alone in a quiet house on a quiet street. No-one ever visits, and they never leave. Things have always been this way and the two girls know they always will be. They are happy. But fun and games are only fun for so long, and as the playful wanderings of Briar’s mind begin to lead her thoughts into the unknown, the pressure out the world outside the windows begins to push in on their sealed safety and threatens to divide the sisters forever.</div>
+                </div> 
             </div>
         </div>
     </div>    
