--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="index.html">Aotearoa Independent Film</a>
+        <a href="../index.html" style="color: green; text-decoration: none;">Aotearoa Independent Film</a>
     </div>
 
     <div class="page">
@@ -22,6 +22,8 @@
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
+                <li> <br></li>
                 <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
@@ -30,8 +32,8 @@
                 Ordering Films & Books from AIF
             </div>
             <div class="bodytext">
-            To order a copy of any of the films listed in the <a href="./filmmakers/filmmakers.html">Filmmakers / films<a> section please download and fill out an <a style="font-weight: bold; color: green;" href="AIFOrderForm.pdf" target="_blank">Order Form</a> (click to download)<br>
-            You can e-mail your for to theodore[at]aotearoaindependentfilm.com and I'll get back to you asap to sort payment and access to download and view your purchases.<br>
+            To order a copy of any of the films listed in the <a href="../filmmakers/filmmakers.html">Filmmakers / films<a> section please download and fill out an <a style="font-weight: bold; color: green;" href="AIFOrderForm.pdf" target="_blank">Order Form</a> (click to download)<br>
+            You can e-mail your order form to theodore[at]aotearoaindependentfilm.com and I'll get back to you asap to sort payment and access to download and view your purchases.<br>
             Alternately you can give Theo a call directly, and let him know which films you're interesteed in purchasing and he'll help you sort out the details.<br>
             <br>
             Book purchases will be shipped once payment has been recieved. Please note that films are currently only avilable as digital downloads (no phyisical DVDs/BluRays yet, sorry).<br>
