--- a/book/book.html
+++ b/book/book.html
@@ -17,9 +17,12 @@
                 <p1 style="color: green; font-weight: bolder; ">LINKS</p1>
                 <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="#">Book</a></li>
+                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
+                <li> <br></li>
+                <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
                 <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
