--- a/filmmakers/filmmakers.html
+++ b/filmmakers/filmmakers.html
@@ -17,6 +17,7 @@
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="#">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Book</a></li>
+                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
