--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="./book/book.html">Books</a></li>
-                <li><a href="#">Ordering Films & Books from AIF</a></li>
+                <li><a href="./placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
                 <li><a href="./podcast/podcat.html">++ call this something else beside podcasts ++</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
