added footer to homepage

--- a/index.html
+++ b/index.html
@@ -38,11 +38,18 @@
             <br> 
             <br> 
             <div style="font-size: 10px; color: green;">
-             im shit at spelling and proof reading and all the content for this website is written in the coding programme which doesn't do the underlining misspelt words thing.
+            im shit at spelling and proof reading and all the content for this website is written in the coding programme which doesn't do the underlining misspelt words thing.
             so there are probably a lot of spelling and typographical errors<br>
             bite me<br>
             </div>
         </div>
-    </div>    
+    </div> 
+    <div class="footer">
+        this website has been designed to be viewed at 1080p resolutions. fuck 4K.<br>
+        this website has only been tested on firefox so probably won't work right on anything else.<br>
+        this website won't display right on phones so don't bother.</br>
+        copyright 2025 AIF
+    </div>   
 </body>
+
 </html>
