--- a/contact/contact.html
+++ b/contact/contact.html
@@ -17,18 +17,19 @@
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
                 <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
                 <li><a href="../book/book.html">Books</a></li>
-                <li><a href="#">Ordering Films & Books from AIF</a></li>
-                <li><a href="../podcast/podcat.html">++ call this something else beside podcasts ++</a></li>
+                <li><a href="../placinganorder/placinganorder.html">Ordering Films & Books from AIF</a></li>
+                <li><a href="../podcast/podcast.html">++ call this something else beside podcasts ++</a></li>
                 <li><a href="#">Newsletter</a></li>
                 <li><a href="#">Rants</a></li>
                 <li> <br></li>
                 <li><a href="#">Contact</a></li>
                 <li> <br></li>
-                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
+                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
-            Body text here
+            get in touch<br>
+            theodore[at]aotearoaindependentfilm.com
         </div>
     </div>    
 </body>
