fixed link to placing an oder page on f. theodore films page

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -35,7 +35,7 @@
             theodore is a filmmmaker<br>
             He has made the following films which are avilable for purchase:<br>
             <br>
-            (To purchase, any films from AIF please visit the <a href="../placinganorder.htmlcd">'Placing An Order'</a> page linked here or on the sidebar.)
+            (To purchase, any films from AIF please visit the <a href="../placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.)
             </div>
             <div class="film">
                 <div class="filmposter">
