fixed sidebar links on placing an order page

--- a/placinganorder/placinganorder.html
+++ b/placinganorder/placinganorder.html
@@ -15,8 +15,8 @@
         <div class="sidebar">
             <ul>
                 <p1 style="color: green; font-weight: bolder; font-size: 18px;">LINKS</p1>
-                <li><a href="./filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
-                <li><a href="./book/book.html">Book</a></li>
+                <li><a href="../filmmakers/filmmakers.html">Filmmakers / films ('watch')</a></li>
+                <li><a href="../book/book.html">Book</a></li>
                 <li><a href="#">Ordering Films & Books from AIF</a></li>
                 <li><a href="#">Podcast Episodes</a></li>
                 <li><a href="#">Newsletter</a></li>
@@ -24,7 +24,7 @@
                 <li> <br></li>
                 <li><a href="../contact/contact.html">Contact</a></li>
                 <li> <br></li>
-                <li><a href="./whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
+                <li><a href="../whywebsite/whywebsite.html">Why does this website look like shit?</a></li>
             </ul>
         </div>
         <div class="body">
