updated book page to let people know book isn't ready

--- a/book/book.html
+++ b/book/book.html
@@ -28,11 +28,15 @@
             </ul>
         </div>
         <div class="body">
-            I wrote a book that covers some of my thoughts and advice on independent/self-funded filmmaker<br>
+            <s>I wrote a book that covers some of my thoughts and advice on independent/self-funded filmmaker<br>
             <br>
             The book is only availble in physical form so if you're looking to grab a copy you can e-mail me at ftheodoreelliott[at]proton.me or feel free to come and have a chat if you see me at an event of something.<br>
             <br>
-            - f. theodore elliott
+            - f. theodore elliott</s><br>
+            <br>
+            the book isn't done yet. Hopefully will be ready before too long but who knows.<br>
+            check back here in a bit and see if anything's changed.<br>
+            - theodore
         </div>
     </div>    
 </body>
