added all my films to by filmmaker page

--- a/filmmakers/f.theodore.elliott.html
+++ b/filmmakers/f.theodore.elliott.html
@@ -37,27 +37,135 @@
             <br>
             (To purchase, any films from AIF please visit the <a href="../placinganorder.html">'Placing An Order'</a> page linked here or on the sidebar.)
             </div>
+            
             <div class="film">
                 <div class="filmposter">
                     <div>
-                        <img src="baseballposter.jpg" alt="Baseball film poster" style="width: 250px; height:auto"></a>
-                    </div>    
+                        <img src="./theoposters/untitledposter.jpg" alt="film poster" style="width: 200px; height:auto"></a>
+                    </div>
                 </div>   
                 <div class="filmdescription">
-                    <div style="font-weight: bold;font-size: 20px;"> Baseball (2016) </div>
-                    <div style="font-weight: bold">Everyone around here knows each other now…</div>
-                    <div>Abandoned houses filled with useless old junk. Empty streets in deserted suburbs. And why do the airplanes seem to only be heading west?<br>‘Baseball’ is a cryptic and hypnotic fever-dream of a world out of sync. Like picture postcards from a parallel universe, a series of static and surreal vignettes reveal the lives of a loose knit group of teenagers trying to find sense in emptiness.</div>
+                    <div style="font-weight: bold;font-size: 20px;"> no title (2025) </div>
+                    <div>70 mins</div>
+                    <div>Empty interior landscapes over the course of a single day.</div>
                 </div> 
             </div>
             <div class="film">
                 <div class="filmposter">
                     <div>
-                        <img src="objectlessonposter.jpg" alt="The Object Lesson film poster" style="width: 250px; height:auto"></a>
+                        <img src="./theoposters/lampposter.jpg" alt="2 Lampposts film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;">Two Lampposts, Overcast Sunset, 7.58pm-8.34pm Tues 17th Feb 2025 (2025) </div>
+                    <div>36 mins</div>
+                    <div>Two Lampposts, Overcast Sunset, 7.58pm-8.34pm Tues 17th Feb 2025</div>
+                    <div><i>As this is a shorter film is is sold as a '2 films for the price of 1' bundle with 'no_writhing_now' (below)</i></div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/nowrithingposter.jpg" alt="no_writhing_now film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> no_writhing_now (2025) </div>
+                    <div>33 mins</div>
+                    <div>A man sits at a table reading aloud something he has written.</div>
+                    <div><i>As this is a shorter film is is sold as a '2 film bundle' with 'Two Lampposts, Overcast Sunset...' (above)</i></div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/limestoneposter.jpg" alt="The Limestone Surveyors film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> The Limestone Surveyors (2024) </div>
+                    <div>50 mins</div>
+                    <div>After the discovery of a strange mineral in a remote limestone quarry, a group of surveyors are sent in to investigate.<br>
+                        Their analysis begins.<br>
+                        Things start to shift.<br>
+                        The lights go down.<br>
+                        The film begins.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/thetowerposter.jpg" alt="The Tower film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> The Tower (1st August 1966) (2023) </div>
+                    <div>67 mins</div>
+                    <div>A minimalist documentary about the events on and around the 1st of August 1966 in Austin Texas.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/twodistantfiguresposter.jpg" alt="Two Distant Figures film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;">Two Distant Figures, Walking, In A High Wind (2023) </div>
+                    <div>67 mins</div>
+                    <div style="font-weight: bold">A perfect place to recuperate…</div>
+                    <div>In a recuperation facility for people with a mysterious ailment, two women meet and establish a mystical connection.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/moviolaposter.jpg" alt="She Found A Moviola film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> She Found A Moviola (2021) </div>
+                    <div>364 mins</div>
+                    <div>An Investigation into a Mystery</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/callingbellsposter.jpg" alt="The Calling Bells film poster" style="width: 200px; height:auto"></a>
+                    </div>
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> The Calling Bells (2021) </div>
+                    <div>59 mins</div>
+                    <div>A lonely women.<br>
+                        She hears the Bells calling her.<br>
+                        And so she follows.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/objectlessonposter.jpg" alt="The Object Lesson film poster" style="width: 200px; height:auto"></a>
                     </div>
                 </div>   
                 <div class="filmdescription">
                     <div style="font-weight: bold;font-size: 20px;"> The Object Lesson (2018) </div>
+                    <div>72 mins</div>
                     <div>Briar and Belle live alone in a quiet house on a quiet street. No-one ever visits, and they never leave. Things have always been this way and the two girls know they always will be. They are happy. But fun and games are only fun for so long, and as the playful wanderings of Briar’s mind begin to lead her thoughts into the unknown, the pressure out the world outside the windows begins to push in on their sealed safety and threatens to divide the sisters forever.</div>
+                </div> 
+            </div>
+            <div class="film">
+                <div class="filmposter">
+                    <div>
+                        <img src="./theoposters/baseballposter.jpg" alt="Baseball film poster" style="width: 200px; height:auto"></a>
+                    </div>    
+                </div>   
+                <div class="filmdescription">
+                    <div style="font-weight: bold;font-size: 20px;"> Baseball (2016) </div>
+                    <div>82 mins</div>
+                    <div style="font-weight: bold">Everyone around here knows each other now…</div>
+                    <div>Abandoned houses filled with useless old junk. Empty streets in deserted suburbs. And why do the airplanes seem to only be heading west?<br>‘Baseball’ is a cryptic and hypnotic fever-dream of a world out of sync. Like picture postcards from a parallel universe, a series of static and surreal vignettes reveal the lives of a loose knit group of teenagers trying to find sense in emptiness.</div>
                 </div> 
             </div>
         </div>
